# agent-lib

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
.github/workflows/: publish.yml
lib/: agent.py  user_session.py
lib/clients/: mcp.py
lib/domain/: agent.py  history.py  metadata.py  model.py  response.py  tools_connector.py
lib/models/: anthropic.py  azure_ai_inference.py  openai_history.py
src/phoenix/: agent.py  user_session.py
src/phoenix/connectors/: dummy.py  mcp.py
src/phoenix/domain/: agent.py  history.py  model.py  response.py  tools_connector.py
src/phoenix/models/: anthropic.py  azure_ai_inference.py  openai_history.py
